--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <img src="img/hat.svg" alt="hat" class="hat" />
             <div class="wish">
                 <h3 class="wish-hbd">Happy Birthday!</h3>
-                <h5 id="wishText">May today be the start of a year full of happiness, love and success for you. Thank you for being an important part of
+                <h5 id="wishText">Thank you for being an important part of
                 my life, and may your every step this year be filled with blessings and happiness. Keep being your amazing self, and
                 keep pursuing your dreams with passion ;)</h5>
             </div>
